# rust2py_example

./: Cargo.toml  LICENSE  README.md  rust_person.py  test.py
src/: lib.rs
